2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (ProductionStep.setup): 
	Populate production combos in setup() instead of activate(), to
	avoid reverting to the default state when going back to this step.

2008-03-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* doc/random/wizard-plugin:
	Fix up docs based on start of doing dvb wizard.

2008-03-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/Makefile.am:
	  Actually dist the base component.glade so the admin works again.

2008-03-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/firewire/firewire_wizard.py
	(FireWireVideoProducer.getFeeders): chain up to VideoProducer, not
	AudioProducer

	* flumotion/wizard/productionsteps.py (ProductionStep.plugin_loaded): 
	Do not call worker_changed an extra time, it's not necessary since
	the wizard is already calling it for us a bit later.

2008-03-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/connections.py:
	  The recent connections code also uses registry dir, so ensure it.

2008-03-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/configure/installed.py.in:
	* flumotion/configure/uninstalled.py.in:

	  configure.get() should not have side effects like creating
	  directories.  Fixes #875.

2008-03-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Johan Dahlin

	* flumotion/admin/gtk/message.py:
	* flumotion/common/Makefile.am:
	* flumotion/common/documentation.py:
	* flumotion/common/messages.py:
	* flumotion/common/worker.py:
	  Add a way for messages to link to online documentation.
	  Fixes #874.

2008-03-24  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/componentview.py:
	* flumotion/admin/gtk/main.py:
	Add an enable debug option in the admin interface.
	Reviewed by Zaheer, fixes #825
