@@ -1,5 +1,8 @@
 2008-03-26  Johan Dahlin  <johan@gnome.org>
 
+	* flumotion/test/test_wizard_save.py
+	(TestWizardSave.testDefaultStream):  Add a firewire test.
+
 	* flumotion/wizard/productionsteps.py (ProductionStep.setup): 
 	Populate production combos in setup() instead of activate(), to
 	avoid reverting to the default state when going back to this step.
